<resources>
    <string name="app_name">Noos</string>
    <string name="author">Author</string>
    <string name="date">07 Feb 1994</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="source_title">Source Title</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="error_title">Error Title</string>
    <string name="error_message">Error Message</string>
    <string name="retry">Retry</string>
    <string name="no_result">No Result</string>
    <string name="share">Share</string>
    <string name="open_with_browser">Open with browser</string>
    <string name="link">Link</string>
    <string name="category">Category</string>
    <string name="source_name">Source Name</string>
    <string name="description">Description</string>
    <string name="search_news">Search News</string>
    <string name="getting_news">Getting News…</string>
    <string name="data_empty">Data Is Empty</string>
    <string name="cannot_load_news">Cannot Load News</string>
    <string name="check_your_connection">Please check your connection.</string>
</resources>