<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_very_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/view_thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin_small"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_light"
                    android:importantForAccessibility="no"
                    android:src="@android:drawable/ic_menu_report_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/round_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_author">

                <ImageView
                    android:id="@+id/img_calendar_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_published_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:gravity="center"
                    android:maxLength="10"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_calendar_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_thumbnail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/source"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/layout_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_time"
                app:layout_constraintStart_toEndOf="@+id/view_thumbnail"
                app:layout_constraintTop_toTopOf="@+id/layout_date" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/time"
                app:layout_constraintBottom_toBottomOf="@+id/layout_date"
                app:layout_constraintEnd_toStartOf="@+id/layout_date"
                app:layout_constraintTop_toTopOf="@+id/layout_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>