<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_custom"
        layout="@layout/toolbar_custom"
        android:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_custom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/cardview_default_elevation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/author"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/round_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_author">

                        <ImageView
                            android:id="@+id/img_calendar_icon"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginVertical="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:importantForAccessibility="no"
                            android:src="@drawable/ic_date"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_published_at"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_medium"
                            android:gravity="center"
                            android:text="@string/date"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_calendar_icon"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/time"
                        app:layout_constraintBottom_toBottomOf="@+id/layout_date"
                        app:layout_constraintEnd_toStartOf="@+id/layout_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/layout_date" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                app:cardElevation="@dimen/cardview_default_elevation">

                <WebView
                    android:id="@+id/web_view_news_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:visibility="gone" />

    <include
        android:id="@+id/view_progress_bar"
        layout="@layout/view_progress_bar"
        android:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>